# ScrollPlatform

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
scrollplatform/: .coverage  .env  .env.sample  db.sqlite3  manage.py
scrollplatform/scroll_app/: apps.py  serializers.py  urls.py
scrollplatform/scroll_app/admin/: admin.py
scrollplatform/scroll_app/forms/: __init__.py  post.py  user.py
scrollplatform/scroll_app/migrations/: 0001_initial.py  0002_alter_customuser_avatar_post_postimage.py  0003_comment.py  0004_collectpost_likespost.py  0005_flowsuser.py
scrollplatform/scroll_app/models/: __init__.py  extra.py  models.py
scrollplatform/scroll_app/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py  test_views2.py
scrollplatform/scroll_app/views/: view_api.py  views.py
scrollplatform/scrollplatform/: asgi.py  settings.py  urls.py  wsgi.py
scrollplatform/templates/: base.html  login.html  nav.html  notification.html  post_detail.html  posts.html  profile.html  profile_edit.html  sendPost.html
